# vivium

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bcds/: main.cpp
engine/: ecstest.h  engine.h  entities.h  main.cpp  state.cpp  state.h  tree_container.cpp  tree_container.h
engine/res/: entityView.frag  entityView.vert
game2/: main.cpp
game2/res/: ground.frag  ground.vert  ground_frag.spv  ground_vert.spv  player.frag  player.vert  player_frag.spv  player_vert.spv  sky.frag  sky.vert  sky_frag.spv
testGame/: game_logic.cpp  game_logic.h  main.cpp
testGame/res/: button.frag  button.vert  character.frag  character.spv  character.vert  character_frag.spv  creature.frag  creature.vert  creature_frag.spv  creature_vert.spv  grid.frag  grid.vert  invert.frag  invert.vert  poly.frag  poly.vert  sky.frag  sky.vert  sky_vert.spv  sprite.frag  sprite.vert  text.frag  text.vert  tri.frag  tri.vert
vault/: Plan.md  TODO.md  plan2.md
vault/.obsidian/: workspace.json
vivium4/: allocator.h  core.cpp  core.h  engine.cpp  engine.h  input.cpp  input.h  storage.cpp  storage.h  undef.h  vivium4.cpp  vivium4.h  window.cpp  window.h
vivium4/ecs/: component_array.cpp  component_array.h  component_manager.h  defines.cpp  defines.h  group.cpp  group.h  paged_array.h  registry.cpp  registry.h
vivium4/error/: log.cpp  log.h  result.h
vivium4/graphics/: batch.cpp  batch.h  color.cpp  color.h  commands.cpp  commands.h  device.h  image_load.cpp  image_load.h  renderer.h  resource_manager.cpp  resource_manager.h  texture_atlas.cpp  texture_atlas.h  texture_format.cpp  texture_format.h
vivium4/graphics/gui/: base.cpp  base.h  core.h  font.cpp  font.h  list.cpp  list.h  panel.h  text.cpp  text.h
vivium4/graphics/gui/visual/: button.cpp  button.h  container.cpp  container.h  context.cpp  context.h  debugrect.cpp  debugrect.h  entry.cpp  entry.h  panel.cpp  panel.h  scene.cpp  scene.h  slider.cpp  slider.h  sprite.cpp  sprite.h  text.cpp  text.h  tree_container.h
vivium4/graphics/primitives/: buffer.cpp  buffer.h  descriptor_layout.cpp  descriptor_layout.h  descriptor_set.cpp  descriptor_set.h  framebuffer.cpp  framebuffer.h  memory_type.cpp  memory_type.h  pipeline.cpp  pipeline.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h
vivium4/math/: aabb.cpp  aabb.h  atlas.cpp  atlas.h  mat2x2.cpp  mat2x2.h  math.cpp  math.h  polygon.cpp  polygon.h  transform.cpp  transform.h  vec2.h
vivium4/physics/: body.cpp  body.h  material.cpp  material.h  physics.cpp  physics.h  shape.cpp  shape.h
vivium4/res/: button.vert  debugrect.frag  debugrect.vert  panel.frag  panel.vert  slider.frag  slider.vert  sprite.frag  sprite.vert  text.frag  text.vert
vivium4/serialiser/: serialiser.h
vivium4/structures/: vector.h
vivium4/system/: os.h
vivium4/time/: timer.cpp  timer.h
vivium_resources/shaders/: button.frag
